[gd_scene load_steps=8 format=3 uid="uid://bhrc5gkly1noh"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_7kgjk"]
[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/SolidPanel.tres" id="1_cjes4"]
[ext_resource type="Script" path="res://components/ConfirmationBox/ConfirmationBox.gd" id="1_kpgic"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpxnf"]
content_margin_left = 8.0
content_margin_top = 7.0
content_margin_right = 8.0
content_margin_bottom = 7.0
bg_color = Color(0.962224, 0, 0.148115, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.716793, 0, 0.121165, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_csbl7"]
content_margin_left = 8.0
content_margin_top = 7.0
content_margin_right = 8.0
content_margin_bottom = 7.0
bg_color = Color(0.795534, 0, 0.114831, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.825749, 0, 0.146054, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8tmv"]
content_margin_left = 8.0
content_margin_top = 7.0
content_margin_right = 8.0
content_margin_bottom = 7.0
bg_color = Color(1, 0.27451, 0.27451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.825749, 0, 0.146054, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_243f8"]
content_margin_left = 8.0
content_margin_top = 7.0
content_margin_right = 8.0
content_margin_bottom = 7.0
bg_color = Color(1, 0.27451, 0.27451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.825749, 0, 0.146054, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ConfirmationBox" type="PanelContainer" node_paths=PackedStringArray("_mode_container", "_label")]
custom_minimum_size = Vector2(496.05, 145.07)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_7kgjk")
theme_override_styles/panel = ExtResource("1_cjes4")
script = ExtResource("1_kpgic")
_mode_container = NodePath("VBoxContainer/Modes")
_label = NodePath("VBoxContainer/Label")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Confirm Action"
horizontal_alignment = 1

[node name="Modes" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(301.96, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="DefaultMode" type="HBoxContainer" parent="VBoxContainer/Modes"]
custom_minimum_size = Vector2(301.96, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Cancel" type="Button" parent="VBoxContainer/Modes/DefaultMode"]
layout_mode = 2
size_flags_horizontal = 2
text = "Cancel"

[node name="DELETE" type="Button" parent="VBoxContainer/Modes/DefaultMode"]
layout_mode = 2
size_flags_horizontal = 8
text = "Confirm"

[node name="DeleteMode" type="HBoxContainer" parent="VBoxContainer/Modes"]
visible = false
custom_minimum_size = Vector2(301.96, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Cancel" type="Button" parent="VBoxContainer/Modes/DeleteMode"]
layout_mode = 2
size_flags_horizontal = 2
text = "Cancel"

[node name="DELETE" type="Button" parent="VBoxContainer/Modes/DeleteMode"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_vpxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_csbl7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e8tmv")
theme_override_styles/normal = SubResource("StyleBoxFlat_243f8")
text = "DELETE"

[connection signal="pressed" from="VBoxContainer/Modes/DefaultMode/Cancel" to="." method="_on_rejected_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes/DefaultMode/DELETE" to="." method="_on_confirmed_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes/DeleteMode/Cancel" to="." method="_on_rejected_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes/DeleteMode/DELETE" to="." method="_on_confirmed_button_pressed"]
